numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@incompatible_types_in_conversion.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/incompatible_types_in_conversion.nbt
---
error: while type checking
  ┌─ <internal:3>:1:1
  │
1 │ 0.5 * (80 kg)^2 * 3 m/s -> J
  │ ^^^^^^^^^^^^^^^^^^^^^^^ -- ^ Energy or Torque
  │ │                       │   
  │ │                       incompatible dimensions in unit conversion
  │ Length × Mass² / Time
  │
  =  left hand side: Length  × Mass² × Time⁻¹
    right hand side: Length² × Mass  × Time⁻²    [= Energy, Torque]
